[gd_scene load_steps=6 format=3 uid="uid://4yye06e5g4d"]

[ext_resource type="Script" uid="uid://sqjp8q4r0x15" path="res://Scripts/player.gd" id="1_xhfnw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0rwas"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xhfnw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kpjcp"]
height = 1.2

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rpqav"]
load_path = "res://.godot/imported/crosshair001.png-303a7e1378613b4ab7cfcdd50bbd4d1a.ctex"

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_xhfnw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_0rwas")

[node name="Standing_col" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_xhfnw")

[node name="Crouching_col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.39022, 0)
shape = SubResource("CapsuleShape3D_kpjcp")
disabled = true

[node name="Head" type="Node3D" parent="."]

[node name="neck" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.428245, 0)

[node name="Camera" type="Camera3D" parent="Head/neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0717551, 0)

[node name="Rays" type="Node3D" parent="Head/neck/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="InteractRay" type="RayCast3D" parent="Head/neck/Camera/Rays"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.0900611)
target_position = Vector3(0, 0, -2.5)
collision_mask = 3
debug_shape_custom_color = Color(0.176471, 1, 0, 1)

[node name="Hand" type="Marker3D" parent="Head/neck/Camera/Rays/InteractRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.08933)

[node name="CrouchCheckCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00154, 0)
target_position = Vector3(0, 2, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_rpqav")
metadata/_edit_use_anchors_ = true
